# kicktipper

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  kicktipper.spec  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: predict_and_submit.py
kicktipper/: Bundesliga.sqlite  __init__.py  config.ini  fivethirtyeight.py  gui.py  kicktipp_api.py  kicktipper.py  predictor.py  tipper.py  tipper_bundesliga.py  tkadd.py  tools.py
kicktipper/gui/: gui.py  tkadd.py
tests/: test_kicktipper.py
