[metadata]
name = kicktipper
author = kricki
summary = Interface for kicktipp.de
description-file =
    README.md
description-content-type = text/markdown
home-page = https://github.com/kricki/phytools
requires-python = >=3.6.0
classifier =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Programming Language :: Python
  Topic :: Games/Entertainment

[files]
packages =
    kicktipper